# pythonup-posix

./: .gitignore  Pipfile  README.rst  setup.cfg  setup.py
.github/workflows/: testing.yaml
pym/: __main__.py  conf.py  installations.py  paths.py  versions.py
pym/operations/: common.py  install.py  link.py  use.py  versions.py
pythonup/: __main__.py  conf.py  installations.py  paths.py  versions.py
pythonup/operations/: common.py  install.py  link.py  use.py  versions.py
tools/: dump_requirements.py
