[metadata]
name = pythonup-posix
version = attr: pythonup.__version__
url = https://github.com/uranusjr/pythonup-posix
project_urls =
    Source Code = https://github.com/uranusjr/pythonup-posix
    Issue Tracker = https://github.com/uranusjr/pythonup-posixissues/
license = ISCL
author = Tsu-ping Chung
author_email = uranusjr@gmail.com
description = The Python Runtime Manager for POSIX systems
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages =
    pythonup
    pythonup.operations
include_package_data = true
python_requires = >= 3.6
install_requires =
    click>=7.0
    packaging
    dataclasses;python_version<'3.7'

[options.entry_points]
console_scripts =
    pythonup = pythonup.__main__:cli
